<resources>
    <string name="app_name">EC327App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    //in main activity
    <string name="btn_menu">Menu</string>
    <string name="home_screen">Home Screen</string>

    // in to do list
    <string name="test_assignment">test assignment</string>

    // in menu fragment
    <string name="main_menu">Main Menu</string>
    <string name="classes">Classes</string>
    <string name="addClass">"Add Class"</string>

    // in assignments list by class
    <string name="className">Example Class</string>
    <string name="deleteClass">Delete Class</string>
    <string name="assignments">Assignments</string>
    <string name="addAssignment">New Assignment</string>
</resources>