<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainMenuFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/menuLayout">

        <TextView
            android:id="@+id/textMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:text="@string/main_menu"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
        android:id="@+id/classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="36dp"
        android:text="@string/classes"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMainMenu" />

        <ImageButton
            android:id="@+id/btnAddClass"
            android:layout_width="28dp"
            android:layout_height="30dp"
            android:layout_marginStart="230dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp"
            android:contentDescription="@string/addClass"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/classes"
            app:layout_constraintTop_toBottomOf="@+id/textMainMenu" />

        <EditText
            android:id="@+id/newClass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:inputType="text"
            android:autofillHints=" "
            tools:ignore="LabelFor" />


    </LinearLayout>
</ScrollView>